data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1256.wast
;; 7. **Unconditional Branch Inside Exported Function in Loop**:    - Test a loop executing an unconditional branch (`br`) that targets an exported function. Verify that the function correctly handles the branch and returns control to the correct point in the loop.    - **Constraint**: Ensures correct branch target handling and execution flow continuity across module boundaries.

(assert_invalid
  (module 
    (func $test (result i32) 
      (loop (result i32) 
        (br 1) 
      )
    )
    (export "test" (func $test))
  )
  "type mismatch"
)